// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group should render default slot correctly 1`] = `
<div class="fx-group">
  <div class="fx-group_header">
    <div class="fx-group_title">title</div>
  </div>
  <div class="fx-group_body fx-horizontal-hairline hairline-reverse">
    <div class="fx-group_body-inner">
      <div class="fx-cell  fx-horizontal-hairline">
        <div class="fx-cell_cover"></div>
        <div class="fx-cell_inner">
          <!--v-if-->
          <div class="fx-cell_label">label
            <!--v-if-->
          </div>
          <div class="fx-cell_content">content</div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Group should render prop set title correctly 1`] = `
<div class="fx-group">
  <div class="fx-group_header">
    <div class="fx-group_title">title</div>
  </div>
  <div class="fx-group_body fx-horizontal-hairline hairline-reverse">
    <div class="fx-group_body-inner"></div>
  </div>
</div>
`;
